/*
 * Copyright (C) 2021 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.android.tools.utp.plugins.deviceprovider.gradle.proto;

import "google/protobuf/any.proto";
import "gradle_managed_device_config.proto";

option java_package = 'com.android.tools.utp.plugins.deviceprovider.gradle.proto';
option java_outer_classname = 'GradleManagedAndroidDeviceProviderProto';

// Provides configuration values for the Gradle Managed android device provider.
// Config values are for various settings to run the managed device from the
// emulator.
message GradleManagedAndroidDeviceProviderConfig {
    // All the information about the managed device.
    GradleManagedDeviceConfig managed_device = 1;

    // Port to start the ADB server on. Default is 5037
    int32 adb_server_port = 2;

    // Configuration for the adb library.
    // Message must be com.google.testing.platform.proto.api.config.AdbConfigProto.AdbConfig.
    google.protobuf.Any adb_config = 3;
}
