/*
 * Copyright (C) 2021 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.android.tools.utp.plugins.deviceprovider.gradle.proto;

import "google/protobuf/any.proto";

option java_package = 'com.android.tools.utp.plugins.deviceprovider.gradle.proto';
option java_outer_classname = 'GradleManagedDeviceProto';

// Fields that correspond to a device managed by the Gradle Plugin for android.
message GradleManagedDeviceConfig {
    // The absolute path to the folder used by the Gradle Plugin for Android for
    // Android Virtual Devices.
    // Message type must be com.google.testing.platform.proto.api.core.PathProto.Path.
    google.protobuf.Any avd_folder = 1;

    // Name of the android virtual device to be run from the given avd_folder.
    string avd_name = 2;

    // A unique identifier supplied by the Gradle Plugin for android to
    // distinguish this emulator instance from other instances that use the same
    // device name
    string avd_id = 3;

    // Enables the device to be displayed to the user.
    bool enable_display = 4;

    // The absolute path to the emulator executable.
    // Message must be com.google.testing.platform.proto.api.core.PathProto.Path.
    google.protobuf.Any emulator_path = 5;

    // The name of the Managed Device as provided from the dsl.
    string gradle_dsl_device_name = 6;
}
