/*
 * Copyright (C) 2021 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.android.tools.utp.plugins.result.listener.gradle.proto;

import "google/protobuf/any.proto";

option java_package = 'com.android.tools.utp.plugins.result.listener.gradle.proto';
option java_outer_classname = 'GradleAndroidTestResultListenerConfigProto';

// A configuration of GradleAndroidTestResultListener plugin.
message GradleAndroidTestResultListenerConfig {
    // Test Result Listener gRPC server port number.
    int32 resultListenerServerPort = 1;

    // A file path to the cert of the gRPC client.
    string resultListenerClientCertFilePath = 2;

    // A file path to the private key of the gRPC client.
    // This private key is used to enable mutual TLS.
    string resultListenerClientPrivateKeyFilePath = 3;

    // A file path to the trusted cert chain.
    string trustCertCollectionFilePath = 4;

    // A device ID to listen to for test results.
    string deviceId = 5;
}
